User view: Add all components showing the user data

--- a/src/styles/variables/bulma-variables.scss
+++ b/src/styles/variables/bulma-variables.scss
@@ -2,5 +2,5 @@
 $family-sans-serif: #{$fallback-fonts};
 
 // Colors
-$primary: $main-color;
 $info: $main-color;
+$primary: $main-color-medium-light;
